# rerun-generic-timeseries-view

./: Cargo.toml  README.md
crates/fc_rerun/: Cargo.toml
crates/fc_rerun/src/: main.rs
crates/generic_timeseries_view/: Cargo.toml  README.md
crates/generic_timeseries_view/src/: lib.rs  line_visualizer_system.rs  point_visualizer_system.rs  series_query.rs  span_visualizer_system.rs  ui.rs  util.rs  view_class.rs
python/: main.py  pyproject.toml
