[package]
name = "fc_rerun"
description = "Rerun with all the Flowcopter bells and whistles"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rerun.workspace = true
generic_timeseries_view = {path = "../generic_timeseries_view"}
mimalloc.workspace = true

[lints]
workspace = true
